--- a/style.css
+++ b/style.css
@@ -171,6 +171,39 @@ h5 {
 	background: #2f3136;
 }
 
+button3 {
+	font-size: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 8px;
+	padding-bottom: 6px;
+	margin-bottom: 0px;
+	margin-right: 2px;
+	background: #2f3136;
+}
+
+h7 {
+	font-size: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 8px;
+	padding-bottom: 6px;
+	margin-bottom: 0px;
+	margin-right: 2px;
+	background: #2f3136;
+}
+
+h8 {
+	font-size: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 8px;
+	padding-bottom: 6px;
+	margin-bottom: 0px;
+	margin-right: 2px;
+	background: #34373c;
+}
+
 h6 {
 	font-size: 14px;
 	padding-left: 20px;
@@ -201,7 +234,7 @@ h4 {
 	position: fixed;
 	bottom: -18px;
 	left: 0;
-	height: 89%;
+	height: 84%;
 	width: 300px;
 	overflow: scroll;
 }
@@ -217,6 +250,21 @@ h4 {
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: 12%;
+	height: 18%;
 	width: 300px;
+}
+
+table {
+	padding: 10px;
+	text-align: left;
+}
+
+td {
+	padding: 6px;
+	text-align: left;
+	vertical-align: center;
+}
+
+#species_table tr:nth-child(1){
+	width: 20px;
 }
