--- a/rw/style.css
+++ b/rw/style.css
@@ -16,10 +16,40 @@ body {
 	margin: 0;
 }
 
-.navbar {
+
+.carousel_container_main {
 	width: 100%;
-	height: 150px;
-	background: linear-gradient(180deg, rgba(22,48,43,1) 0%, rgba(68,106,97,0) 100%);
+	height: 800px;
+	transition: margin 0.5s;
+	margin-left: 0;
+	background-image: url(assets/screenshots/cloudfall.png);
+	position: fixed;
+	z-index: 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.carousel_container_next {
+	width: 100%;
+	height: 800px;
+	transition: margin 0.5s;
+	margin-left: -100%;
+	background-image: url(assets/screenshots/mahlangeni.png);
+	position: fixed;
+	z-index: 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+
+.navbar {
+	position: absolute;
+	z-index: 2;
+	width: 100%;
+	height: 200px;
+	background: linear-gradient(180deg, rgba(10,30,30,0.8) 0%, rgba(18,40,38,0.6) 50%, rgba(68,106,97,0) 100%);
 	font-family: whitney;
 	font-weight: bold;
 	margin: 0 0 0 0;
