--- a/style.css
+++ b/style.css
@@ -12,10 +12,17 @@ body {
 	color: #fafafa;
 }
 
-canvas {
-    left: 0;
-    right: 0;
-    image-rendering: pixelated;
+canvas{
+    position:absolute;
+    left:0px;
+    top:0px;
+    margin:0px;
+    padding:0px;
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .editor_ui {
